@@ -4,17 +4,19 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.iidm.network.util;
 
-import com.google.common.collect.ImmutableMap;
-import com.powsybl.commons.PowsyblException;
-import com.powsybl.commons.io.table.*;
+import com.powsybl.commons.io.table.AbstractTableFormatter;
+import com.powsybl.commons.io.table.AsciiTableFormatter;
+import com.powsybl.commons.io.table.Column;
+import com.powsybl.commons.io.table.HorizontalAlignment;
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.iidm.network.*;
 import com.powsybl.math.graph.TraverseResult;
 import org.slf4j.Logger;
 
-import javax.script.*;
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -26,7 +28,7 @@ import java.util.stream.IntStream;
 
 /**
  *
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 public final class Networks {
 
@@ -38,7 +40,7 @@ public final class Networks {
     }
 
     public static Map<String, String> getExecutionTags(Network network) {
-        return ImmutableMap.of("variant", network.getVariantManager().getWorkingVariantId());
+        return Map.of("variant", network.getVariantManager().getWorkingVariantId());
     }
 
     public static void dumpVariantId(Path workingDir, String variantId) throws IOException {
@@ -52,26 +54,11 @@ public final class Networks {
         dumpVariantId(workingDir, network.getVariantManager().getWorkingVariantId());
     }
 
-    public static void runScript(Network network, Reader reader, Writer out) {
-        ScriptEngineManager mgr = new ScriptEngineManager();
-        ScriptEngine jsEngine = mgr.getEngineByName("js");
-        try {
-            ScriptContext context = new SimpleScriptContext();
-            context.setAttribute("network", network, ScriptContext.ENGINE_SCOPE);
-            if (out != null) {
-                context.setWriter(out);
-            }
-            jsEngine.eval(reader, context);
-        } catch (ScriptException e) {
-            throw new PowsyblException(e);
-        }
-    }
-
     static class ConnectedPower {
         private int busCount = 0;
 
-        private List<String> connectedLoads = new ArrayList<>();
-        private List<String> disconnectedLoads = new ArrayList<>();
+        private final List<String> connectedLoads = new ArrayList<>();
+        private final List<String> disconnectedLoads = new ArrayList<>();
         private double connectedLoadVolume = 0.0;
         private double disconnectedLoadVolume = 0.0;
 
@@ -79,29 +66,15 @@ public final class Networks {
         private double disconnectedMaxGeneration = 0.0;
         private double connectedGeneration = 0.0;
         private double disconnectedGeneration = 0.0;
-        private List<String> connectedGenerators = new ArrayList<>();
-        private List<String> disconnectedGenerators = new ArrayList<>();
+        private final List<String> connectedGenerators = new ArrayList<>();
+        private final List<String> disconnectedGenerators = new ArrayList<>();
 
-        private List<String> connectedShunts = new ArrayList<>();
-        private List<String> disconnectedShunts = new ArrayList<>();
+        private final List<String> connectedShunts = new ArrayList<>();
+        private final List<String> disconnectedShunts = new ArrayList<>();
         private double connectedShuntPositiveVolume = 0.0;
         private double disconnectedShuntPositiveVolume = 0.0;
         private double connectedShuntNegativeVolume = 0.0;
         private double disconnectedShuntNegativeVolume = 0.0;
-    }
-
-    /**
-     * @deprecated Use {@link #printBalanceSummary(String, Network, Writer)} instead.
-     */
-    @Deprecated
-    public static void printBalanceSummary(String title, Network network, Logger logger) throws IOException {
-        Objects.requireNonNull(logger);
-        if (logger.isDebugEnabled()) {
-            try (Writer writer = new StringWriter()) {
-                printBalanceSummary(title, network, writer);
-                logger.debug(writer.toString());
-            }
-        }
     }
 
     public static void printBalanceSummary(String title, Network network, Writer writer) throws IOException {
@@ -114,7 +87,7 @@ public final class Networks {
 
         addBuses(network, balanceMainCC, balanceOtherCC);
         addLoads(network, balanceMainCC, balanceOtherCC);
-        addDanglingLines(network, balanceMainCC, balanceOtherCC);
+        addBoundaryLines(network, balanceMainCC, balanceOtherCC);
         addGenerators(network, balanceMainCC, balanceOtherCC);
         addShuntCompensators(network, balanceMainCC, balanceOtherCC);
 
@@ -154,8 +127,8 @@ public final class Networks {
         }
     }
 
-    private static void addDanglingLines(Network network, ConnectedPower balanceMainCC, ConnectedPower balanceOtherCC) {
-        for (DanglingLine dl : network.getDanglingLines()) {
+    private static void addBoundaryLines(Network network, ConnectedPower balanceMainCC, ConnectedPower balanceOtherCC) {
+        for (BoundaryLine dl : network.getBoundaryLines(BoundaryLineFilter.UNPAIRED)) {
             Terminal.BusBreakerView view = dl.getTerminal().getBusBreakerView();
             if (view.getBus() != null) {
                 if (view.getBus().isInMainConnectedComponent()) {
@@ -292,18 +265,18 @@ public final class Networks {
                     .writeCell(Double.toString(balanceOtherCC.connectedGeneration))
                     .writeCell(Double.toString(balanceOtherCC.disconnectedGeneration));
             formatter.writeCell("Shunt at nom V (MVar)")
-                    .writeCell(Double.toString(balanceMainCC.connectedShuntPositiveVolume) + " " +
-                            Double.toString(balanceMainCC.connectedShuntNegativeVolume) +
-                            " (" + Integer.toString(balanceMainCC.connectedShunts.size()) + ")")
-                    .writeCell(Double.toString(balanceMainCC.disconnectedShuntPositiveVolume) + " " +
-                            Double.toString(balanceMainCC.disconnectedShuntNegativeVolume) +
-                            " (" + Integer.toString(balanceMainCC.disconnectedShunts.size()) + ")")
-                    .writeCell(Double.toString(balanceOtherCC.connectedShuntPositiveVolume) + " " +
-                            Double.toString(balanceOtherCC.connectedShuntNegativeVolume) +
-                            " (" + Integer.toString(balanceOtherCC.connectedShunts.size()) + ")")
-                    .writeCell(Double.toString(balanceOtherCC.disconnectedShuntPositiveVolume) + " " +
-                            Double.toString(balanceOtherCC.disconnectedShuntNegativeVolume) +
-                            " (" + Integer.toString(balanceOtherCC.disconnectedShunts.size()) + ")");
+                    .writeCell(balanceMainCC.connectedShuntPositiveVolume + " " +
+                        balanceMainCC.connectedShuntNegativeVolume +
+                            " (" + balanceMainCC.connectedShunts.size() + ")")
+                    .writeCell(balanceMainCC.disconnectedShuntPositiveVolume + " " +
+                        balanceMainCC.disconnectedShuntNegativeVolume +
+                            " (" + balanceMainCC.disconnectedShunts.size() + ")")
+                    .writeCell(balanceOtherCC.connectedShuntPositiveVolume + " " +
+                        balanceOtherCC.connectedShuntNegativeVolume +
+                            " (" + balanceOtherCC.connectedShunts.size() + ")")
+                    .writeCell(balanceOtherCC.disconnectedShuntPositiveVolume + " " +
+                        balanceOtherCC.disconnectedShuntNegativeVolume +
+                            " (" + balanceOtherCC.disconnectedShunts.size() + ")");
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
@@ -348,7 +321,7 @@ public final class Networks {
      * Return the list of nodes (N/B topology) for each bus of a the Bus view
      * If a node is not associated to a bus, it is not included in any list.
      * @param voltageLevel The voltage level to traverse
-     * @return the list of nodes (N/B topology) for each bus of a Bus view
+     * @return a map with the list of nodes (N/B topology) for each bus of a Bus view
      */
     public static Map<String, Set<Integer>> getNodesByBus(VoltageLevel voltageLevel) {
         checkNodeBreakerVoltageLevel(voltageLevel);
@@ -377,25 +350,25 @@ public final class Networks {
         return nodesByBus;
     }
 
+    private static void addBusFromTerminal(String busId, Terminal terminal, Function<Terminal, Bus> getBusFromTerminal, Set<Integer> nodes, int node) {
+        Bus bus = getBusFromTerminal.apply(terminal);
+        if (bus != null && bus.getId().equals(busId)) {
+            nodes.add(node);
+        }
+    }
+
     public static IntStream getNodes(String busId, VoltageLevel voltageLevel, Function<Terminal, Bus> getBusFromTerminal) {
         checkNodeBreakerVoltageLevel(voltageLevel);
         Set<Integer> nodes = new TreeSet<>();
         for (int i : voltageLevel.getNodeBreakerView().getNodes()) {
             Terminal terminal = voltageLevel.getNodeBreakerView().getTerminal(i);
             if (terminal != null) {
-                Bus bus = getBusFromTerminal.apply(terminal);
-                if (bus != null && bus.getId().equals(busId)) {
-                    nodes.add(i);
-                }
+                addBusFromTerminal(busId, terminal, getBusFromTerminal, nodes, i);
             } else {
                 // If there is no terminal for the current node, we try to find one traversing the topology
                 Terminal equivalentTerminal = Networks.getEquivalentTerminal(voltageLevel, i);
-
                 if (equivalentTerminal != null) {
-                    Bus bus = getBusFromTerminal.apply(equivalentTerminal);
-                    if (bus != null && bus.getId().equals(busId)) {
-                        nodes.add(i);
-                    }
+                    addBusFromTerminal(busId, equivalentTerminal, getBusFromTerminal, nodes, i);
                 }
             }
         }
@@ -437,5 +410,69 @@ public final class Networks {
         if (voltageLevel.getTopologyKind() != TopologyKind.NODE_BREAKER) {
             throw new IllegalArgumentException("The voltage level " + voltageLevel.getId() + " is not described in Node/Breaker topology");
         }
+    }
+
+    /**
+     * Set a {@link ReportNode} in the reportNode context of the given network, execute a runnable then restore the reportNode context.
+     *
+     * @param network a network
+     * @param reportNode the reportNode to use
+     * @param runnable the runnable to execute
+     */
+    public static void executeWithReportNode(Network network, ReportNode reportNode, Runnable runnable) {
+        network.getReportNodeContext().pushReportNode(reportNode);
+        try {
+            runnable.run();
+        } finally {
+            network.getReportNodeContext().popReportNode();
+        }
+    }
+
+    /**
+     * Returns a {@link ReportNodeContext} containing the same reportNodes as the given one,
+     * but reconfigured to allow it, or not, to be accessed simultaneously by different threads.
+     * When this option is activated, the reportNode context can have a different content
+     * for each thread.
+     *
+     * @param reportNodeContext the ReportNodeContext to reconfigure
+     * @param allow allow multi-thread access to the ReportNodeContext
+     * @return the reconfigured ReportNodeContext
+     */
+    public static AbstractReportNodeContext allowReportNodeContextMultiThreadAccess(AbstractReportNodeContext reportNodeContext, boolean allow) {
+        AbstractReportNodeContext newReportNodeContext = null;
+        if (allow && !(reportNodeContext instanceof MultiThreadReportNodeContext)) {
+            newReportNodeContext = new MultiThreadReportNodeContext(reportNodeContext);
+        } else if (!allow && !(reportNodeContext instanceof SimpleReportNodeContext)) {
+            newReportNodeContext = new SimpleReportNodeContext(reportNodeContext);
+            if (reportNodeContext instanceof MultiThreadReportNodeContext multiThreadReportNodeContext) {
+                multiThreadReportNodeContext.close(); // to avoid memory leaks
+            }
+        }
+        return newReportNodeContext != null ? newReportNodeContext : reportNodeContext;
+    }
+
+    /**
+     * This method replaces the "input" values used for load flow calculation by their solved values returned by the
+     * load flow calculation. This includes the tap position of tap changers, the section count of shunt compensators,
+     * the active and reactive power flow on generators, batteries, loads and on the generation part of a boundary line
+     * and the voltage on generators and boundary lines.
+     */
+    public static void applySolvedValues(Network network) {
+        network.getTwoWindingsTransformerStream().forEach(TwoWindingsTransformer::applySolvedValues);
+        network.getThreeWindingsTransformerStream().forEach(ThreeWindingsTransformer::applySolvedValues);
+        network.getShuntCompensatorStream().forEach(ShuntCompensator::applySolvedValues);
+        network.getGeneratorStream().forEach(Generator::applySolvedValues);
+        network.getBatteryStream().forEach(Battery::applySolvedValues);
+        network.getLoadStream().forEach(Load::applySolvedValues);
+        network.getBoundaryLineStream().forEach(BoundaryLine::applySolvedValues);
+    }
+
+    /**
+     * This method replaces the "input" status of tap changer position and shunt section count by their solved values if they are present.
+     */
+    public static void applySolvedTapPositionAndSolvedSectionCount(Network network) {
+        network.getTwoWindingsTransformerStream().forEach(TwoWindingsTransformer::applySolvedValues);
+        network.getThreeWindingsTransformerStream().forEach(ThreeWindingsTransformer::applySolvedValues);
+        network.getShuntCompensatorStream().forEach(ShuntCompensator::applySolvedValues);
     }
 }
