@@ -4,14 +4,18 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.security;
 
 import com.powsybl.commons.io.table.*;
+import com.powsybl.contingency.violations.*;
 import com.powsybl.iidm.network.Country;
+import com.powsybl.iidm.network.Identifiable;
+import com.powsybl.iidm.network.LoadingLimits;
 import com.powsybl.iidm.network.Network;
-import com.powsybl.security.detectors.DefaultLimitViolationDetector;
-import com.powsybl.security.detectors.LoadingLimitType;
+import com.powsybl.iidm.network.limitmodification.LimitsComputer;
+import com.powsybl.security.limitreduction.SimpleLimitsComputer;
 import com.powsybl.security.results.PostContingencyResult;
 
 import java.io.IOException;
@@ -24,7 +28,7 @@ import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 public final class Security {
 
@@ -48,28 +52,53 @@ public final class Security {
     }
 
     public static List<LimitViolation> checkLimits(Network network) {
-        return checkLimits(network, EnumSet.allOf(LoadingLimitType.class), 1f);
+        return checkLimits(network, EnumSet.allOf(LoadingLimitType.class), LimitsComputer.NO_MODIFICATIONS);
     }
 
-    public static List<LimitViolation> checkLimits(Network network, float limitReduction) {
-        return checkLimits(network, EnumSet.allOf(LoadingLimitType.class), limitReduction);
+    public static List<LimitViolation> checkLimits(Network network, double limitReductionValue) {
+        return checkLimits(network, EnumSet.allOf(LoadingLimitType.class), limitReductionValue);
     }
 
-    public static List<LimitViolation> checkLimits(Network network, LoadingLimitType currentLimitType, float limitReduction) {
+    public static List<LimitViolation> checkLimits(Network network, LoadingLimitType currentLimitType, double limitReductionValue) {
         Objects.requireNonNull(currentLimitType);
-        return checkLimits(network, EnumSet.of(currentLimitType), limitReduction);
+        return checkLimits(network, EnumSet.of(currentLimitType), limitReductionValue);
     }
 
-    public static List<LimitViolation> checkLimits(Network network, Set<LoadingLimitType> currentLimitTypes, float limitReduction) {
+    public static List<LimitViolation> checkLimits(Network network, Set<LoadingLimitType> currentLimitTypes, double limitReductionValue) {
+        // allow to increase the limits
+        if (limitReductionValue <= 0) {
+            throw new IllegalArgumentException("Bad limit reduction " + limitReductionValue);
+        }
+        return checkLimits(network, currentLimitTypes, new SimpleLimitsComputer(limitReductionValue));
+    }
+
+    public static List<LimitViolation> checkLimits(Network network, LimitsComputer<Identifiable<?>, LoadingLimits> limitsComputer) {
+        return checkLimits(network, EnumSet.allOf(LoadingLimitType.class), limitsComputer);
+    }
+
+    public static List<LimitViolation> checkLimits(Network network, Set<LoadingLimitType> currentLimitTypes, LimitsComputer<Identifiable<?>, LoadingLimits> limitsComputer) {
         Objects.requireNonNull(network);
         Objects.requireNonNull(currentLimitTypes);
+        List<LimitViolation> violations = new ArrayList<>();
+        LimitViolationDetection.checkAll(network, currentLimitTypes, limitsComputer, violations::add);
+        return violations;
+    }
 
+    public static List<LimitViolation> checkLimitsDc(Network network, double limitReductionValue, double dcPowerFactor) {
         // allow to increase the limits
-        if (limitReduction <= 0) {
-            throw new IllegalArgumentException("Bad limit reduction " + limitReduction);
+        if (limitReductionValue <= 0) {
+            throw new IllegalArgumentException("Bad limit reduction " + limitReductionValue);
+        }
+        return checkLimitsDc(network, new SimpleLimitsComputer(limitReductionValue), dcPowerFactor);
+    }
+
+    public static List<LimitViolation> checkLimitsDc(Network network, LimitsComputer<Identifiable<?>, LoadingLimits> limitsComputer, double dcPowerFactor) {
+        Objects.requireNonNull(network);
+        if (dcPowerFactor <= 0 || dcPowerFactor > 1) {
+            throw new IllegalArgumentException("Invalid DC power factor " + dcPowerFactor);
         }
         List<LimitViolation> violations = new ArrayList<>();
-        new DefaultLimitViolationDetector(limitReduction, currentLimitTypes).checkAll(network, violations::add);
+        LimitViolationDetection.checkAllDc(network, dcPowerFactor, EnumSet.allOf(LoadingLimitType.class), limitsComputer, violations::add);
         return violations;
     }
 
@@ -348,8 +377,7 @@ public final class Security {
 
         @Override
         public boolean equals(Object obj) {
-            if (obj instanceof LimitViolationKey) {
-                LimitViolationKey other = (LimitViolationKey) obj;
+            if (obj instanceof LimitViolationKey other) {
                 return id.equals(other.id) && limitType == other.limitType && limit == other.limit;
             }
             return false;
@@ -406,7 +434,7 @@ public final class Security {
                     // pre-contingency violations filtering
                     List<LimitViolation> filteredLimitViolations2 = filteredLimitViolations.stream()
                             .filter(violation -> preContingencyViolations.isEmpty() || !preContingencyViolations.contains(toKey(violation)))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     return filteredLimitViolations2.size();
                 }
@@ -459,7 +487,7 @@ public final class Security {
                 // pre-contingency violations filtering
                 List<LimitViolation> filteredLimitViolations2 = filteredLimitViolations.stream()
                         .filter(violation -> preContingencyViolations.isEmpty() || !preContingencyViolations.contains(toKey(violation)))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 if (!filteredLimitViolations2.isEmpty() || postContingencyResult.getStatus() != PostContingencyComputationStatus.CONVERGED) {
                     formatter.writeCell(postContingencyResult.getContingency().getId())
