@@ -3,17 +3,22 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.timeseries;
 
 import com.google.common.base.Stopwatch;
-
 import gnu.trove.list.array.TIntArrayList;
 import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.OutputStreamWriter;
+import java.io.StringWriter;
+import java.io.UncheckedIOException;
+import java.io.Writer;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -21,7 +26,11 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
@@ -29,6 +38,9 @@ import java.util.function.IntFunction;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.zip.GZIPOutputStream;
+
+import static com.powsybl.timeseries.TimeSeries.writeInstantToMicroString;
+import static com.powsybl.timeseries.TimeSeries.writeInstantToNanoString;
 
 /**
  * Utility class to load time series into a table and then:
@@ -42,19 +54,18 @@ import java.util.zip.GZIPOutputStream;
  * Some design considerations and limitations:
  * <ul>
  *     <li>Number of version loadable in the table has to be specified at creation</li>
- *     <li>Versions have to contiguous</li>
  *     <li>Once first batch of time series has been loaded, new time series cannot be added but data of existing one can be updated</li>
  *     <li>Concurrent load (i.e multi-thread) of data is supported (using same time series list)</li>
  *     <li>Concurrency between data loading and other operations (CSV writing, statistics computation) is NOT supported</li>
  * </ul>
  *
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 public class TimeSeriesTable {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(TimeSeriesTable.class);
 
-    public class Correlation {
+    public static class Correlation {
 
         private final String timeSeriesName1;
         private final String timeSeriesName2;
@@ -85,7 +96,7 @@ public class TimeSeriesTable {
         }
     }
 
-    private class TimeSeriesNameMap {
+    private static final class TimeSeriesNameMap {
 
         private final BiList<String> names = new BiList<>();
 
@@ -118,9 +129,7 @@ public class TimeSeriesTable {
         }
     }
 
-    private int fromVersion;
-
-    private int toVersion;
+    private final List<Integer> versions;
 
     private List<TimeSeriesMetadata> timeSeriesMetadata;
 
@@ -152,13 +161,18 @@ public class TimeSeriesTable {
     }
 
     public TimeSeriesTable(int fromVersion, int toVersion, TimeSeriesIndex tableIndex, IntFunction<ByteBuffer> byteBufferAllocator) {
-        TimeSeriesVersions.check(fromVersion);
-        TimeSeriesVersions.check(toVersion);
+        this(IntStream.range(fromVersion, toVersion + 1).boxed().toList(), tableIndex, byteBufferAllocator);
         if (toVersion < fromVersion) {
             throw new TimeSeriesException("toVersion (" + toVersion + ") is expected to be greater than fromVersion (" + fromVersion + ")");
         }
-        this.fromVersion = fromVersion;
-        this.toVersion = toVersion;
+    }
+
+    public TimeSeriesTable(List<Integer> versions, TimeSeriesIndex tableIndex, IntFunction<ByteBuffer> byteBufferAllocator) {
+        for (Integer version : versions) {
+            TimeSeriesVersions.check(version);
+        }
+
+        this.versions = versions.stream().sorted().toList();
         this.tableIndex = Objects.requireNonNull(tableIndex);
         this.byteBufferAllocator = Objects.requireNonNull(byteBufferAllocator);
     }
@@ -182,14 +196,14 @@ public class TimeSeriesTable {
 
             for (DoubleTimeSeries timeSeries : doubleTimeSeries.stream()
                                                                .sorted(Comparator.comparing(ts -> ts.getMetadata().getName()))
-                                                               .collect(Collectors.toList())) {
+                                                               .toList()) {
                 timeSeriesMetadata.add(timeSeries.getMetadata());
                 int i = doubleTimeSeriesNames.add(timeSeries.getMetadata().getName());
                 timeSeriesIndexDoubleOrString.add(i);
             }
             for (StringTimeSeries timeSeries : stringTimeSeries.stream()
                                                                .sorted(Comparator.comparing(ts -> ts.getMetadata().getName()))
-                                                               .collect(Collectors.toList())) {
+                                                               .toList()) {
                 timeSeriesMetadata.add(timeSeries.getMetadata());
                 int i = stringTimeSeriesNames.add(timeSeries.getMetadata().getName());
                 timeSeriesIndexDoubleOrString.add(i);
@@ -199,7 +213,7 @@ public class TimeSeriesTable {
                 throw new TimeSeriesException("None of the time series have a finite index");
             }
 
-            int versionCount = toVersion - fromVersion + 1;
+            int versionCount = versions.size();
 
             // allocate double buffer
             long doubleBufferSize = (long) versionCount * doubleTimeSeriesNames.size() * tableIndex.getPointCount();
@@ -253,16 +267,20 @@ public class TimeSeriesTable {
     }
 
     private long getTimeSeriesOffset(int version, int timeSeriesNum) {
-        return (long) timeSeriesNum * tableIndex.getPointCount() * (toVersion - fromVersion + 1) + (version - fromVersion) * tableIndex.getPointCount();
+        return (long) timeSeriesNum * tableIndex.getPointCount() * versions.size() + (long) getVersionIndex(version) * tableIndex.getPointCount();
     }
 
     private int getStatisticsIndex(int version, int timeSeriesNum) {
-        return (version - fromVersion) * doubleTimeSeriesNames.size() + timeSeriesNum;
+        return getVersionIndex(version) * doubleTimeSeriesNames.size() + timeSeriesNum;
     }
 
-    private void checkVersionIsInRange(int version) {
-        if (version < fromVersion || version > toVersion) {
-            throw new IllegalArgumentException("Version is out of range [" + fromVersion + ", " + toVersion + "]");
+    private int getVersionIndex(int version) {
+        return versions.indexOf(version);
+    }
+
+    private void checkVersionIsInList(int version) {
+        if (!versions.contains(version)) {
+            throw new IllegalArgumentException("Version is out of the list " + versions);
         }
     }
 
@@ -306,7 +324,7 @@ public class TimeSeriesTable {
     }
 
     public void load(int version, List<TimeSeries> timeSeriesList) {
-        checkVersionIsInRange(version);
+        checkVersionIsInList(version);
         Objects.requireNonNull(timeSeriesList);
 
         if (timeSeriesList.isEmpty()) {
@@ -319,12 +337,12 @@ public class TimeSeriesTable {
         List<StringTimeSeries> stringTimeSeries = new ArrayList<>();
         for (TimeSeries timeSeries : timeSeriesList) {
             Objects.requireNonNull(timeSeries);
-            if (timeSeries instanceof DoubleTimeSeries) {
-                doubleTimeSeries.add((DoubleTimeSeries) timeSeries);
-            } else if (timeSeries instanceof StringTimeSeries) {
-                stringTimeSeries.add((StringTimeSeries) timeSeries);
+            if (timeSeries instanceof DoubleTimeSeries dts) {
+                doubleTimeSeries.add(dts);
+            } else if (timeSeries instanceof StringTimeSeries sts) {
+                stringTimeSeries.add(sts);
             } else {
-                throw new AssertionError("Unsupported time series type " + timeSeries.getClass());
+                throw new IllegalStateException("Unsupported time series type " + timeSeries.getClass());
             }
         }
 
@@ -348,7 +366,7 @@ public class TimeSeriesTable {
     }
 
     public double getDoubleValue(int version, int timeSeriesNum, int point) {
-        checkVersionIsInRange(version);
+        checkVersionIsInList(version);
         int doubleTimeSeriesNum = checkTimeSeriesNum(timeSeriesNum);
         checkPoint(point);
         long timeSeriesOffset = getTimeSeriesOffset(version, doubleTimeSeriesNum);
@@ -356,7 +374,7 @@ public class TimeSeriesTable {
     }
 
     public String getStringValue(int version, int timeSeriesNum, int point) {
-        checkVersionIsInRange(version);
+        checkVersionIsInList(version);
         int stringTimeSeriesNum = checkTimeSeriesNum(timeSeriesNum);
         checkPoint(point);
         long timeSeriesOffset = getTimeSeriesOffset(version, stringTimeSeriesNum);
@@ -420,7 +438,7 @@ public class TimeSeriesTable {
     }
 
     private double getStatistics(int version, int timeSeriesNum, double[] stats) {
-        checkVersionIsInRange(version);
+        checkVersionIsInList(version);
         int doubleTimeSeriesNum = checkTimeSeriesNum(timeSeriesNum);
         int statisticsIndex = getStatisticsIndex(version, doubleTimeSeriesNum);
 
@@ -497,7 +515,7 @@ public class TimeSeriesTable {
 
     public double[] computePpmcc(String timeSeriesName, int version) {
         int timeSeriesNum1 = doubleTimeSeriesNames.getIndex(timeSeriesName);
-        checkVersionIsInRange(version);
+        checkVersionIsInList(version);
 
         Stopwatch stopWatch = Stopwatch.createStarted();
 
@@ -582,7 +600,7 @@ public class TimeSeriesTable {
         writer.write(System.lineSeparator());
     }
 
-    private class CsvCache {
+    private final class CsvCache {
 
         static final int CACHE_SIZE = 10;
 
@@ -605,7 +623,7 @@ public class TimeSeriesTable {
                     cache.stringCache[cachedPoint * stringTimeSeriesNames.size() + timeSeriesNum] = stringBuffer.getString(timeSeriesOffset + point + cachedPoint);
                 }
             } else {
-                throw new AssertionError("Unexpected data type " + metadata.getDataType());
+                throw new IllegalStateException("Unexpected data type " + metadata.getDataType());
             }
         }
     }
@@ -640,7 +658,7 @@ public class TimeSeriesTable {
                     String value = cache.stringCache[cachedPoint * stringTimeSeriesNames.size() + timeSeriesNum];
                     writeString(writer, value);
                 } else {
-                    throw new AssertionError("Unexpected data type " + metadata.getDataType());
+                    throw new IllegalStateException("Unexpected data type " + metadata.getDataType());
                 }
             }
             writer.write(System.lineSeparator());
@@ -648,20 +666,14 @@ public class TimeSeriesTable {
     }
 
     private void writeTime(Writer writer, TimeSeriesCsvConfig timeSeriesCsvConfig, int point, int cachedPoint) throws IOException {
-        long time = tableIndex.getTimeAt(point + cachedPoint);
+        Instant instant = tableIndex.getInstantAt(point + cachedPoint);
         switch (timeSeriesCsvConfig.timeFormat()) {
-            case DATE_TIME:
-                ZonedDateTime dateTime = ZonedDateTime.ofInstant(Instant.ofEpochMilli(time), ZoneId.systemDefault());
-                writer.write(dateTime.format(timeSeriesCsvConfig.dateTimeFormatter()));
-                break;
-            case FRACTIONS_OF_SECOND:
-                writer.write(Double.toString(time / 1000.0));
-                break;
-            case MILLIS:
-                writer.write(Long.toString(time));
-                break;
-            default:
-                throw new AssertionError("Unknown time format " + timeSeriesCsvConfig.timeFormat());
+            case DATE_TIME -> writer.write(ZonedDateTime.ofInstant(instant, ZoneId.systemDefault()).format(timeSeriesCsvConfig.dateTimeFormatter()));
+            case FRACTIONS_OF_SECOND -> writer.write(Double.toString(instant.getEpochSecond() + instant.getNano() / 1e9));
+            case MILLIS -> writer.write(Long.toString(instant.toEpochMilli()));
+            case MICROS -> writer.write(writeInstantToMicroString(instant));
+            case NANOS -> writer.write(writeInstantToNanoString(instant));
+            default -> throw new IllegalStateException("Unknown time format " + timeSeriesCsvConfig.timeFormat());
         }
     }
 
@@ -679,9 +691,8 @@ public class TimeSeriesTable {
                 CsvCache cache = new CsvCache();
 
                 // write data
-                for (int version = fromVersion; version <= toVersion; version++) {
+                for (int version : versions) {
                     for (int point = 0; point < tableIndex.getPointCount(); point += CsvCache.CACHE_SIZE) {
-
                         int cachedPoints = Math.min(CsvCache.CACHE_SIZE, tableIndex.getPointCount() - point);
 
                         // copy from doubleBuffer to cache
